--- a/style.css
+++ b/style.css
@@ -1,7 +1,30 @@
+
 body {
     background-color:#1C1C1C;
 }
-
+ul{
+    display: flex;
+    gap: 100px;
+    text-decoration: underline;
+}
+nav{
+    position: relative;
+    bottom: 500px;
+    left: 40%;
+}
+nav li{
+    list-style-type: none;
+    font-size: 50px;
+}
+header{
+    border: 20px dotted indigo;
+    shape-margin: 50px;
+}
+#imagem{
+    position: sticky;
+    left: 80%;
+    width: 20%;
+}
 .texto-principal {
     margin-right: 20%; 
 }
